src/pages/Home/Home.module.css
.home {
  align-items: center;
  display: flex;
  justify-content: space-between;
  min-height: 100vh;
  padding: 10rem 6% 2rem;
}

.home_content {
  height: 30rem;
}

@keyframes animate {
  from {
    filter: blur(33px);
    opacity: 0;
    transform: translate(0, 120px);
  }

  to {
    filter: blur(0);
    opacity: 1;
    transform: translate(0);
  }
}

.home_content .first_h3 {
  animation: animate 0.8s ease-in-out 1 forwards;
  font-size: 3rem;
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
  opacity: 0;
  position: relative;
}

.home_content .transparent_text {
  animation: animate 0.8s ease-in-out 0.6s 1 forwards;
  opacity: 0;
  position: relative;
  width: 41.3rem;
}

.home_content .animation_text {
  font-family: "Orbitron", sans-serif;
  font-size: 2.7rem;
}

.home_content .transparent_text .animation_text {
  animation-delay: 2s;
  animation: homeBgText 6s linear infinite;
  background-image: linear-gradient(var(--main_color), var(--main_color));
  background-repeat: no-repeat;
  background-clip: text;
  background-position: 0 0;
  color: transparent;
  margin-bottom: 2rem;
  -webkit-text-stroke: 0.7px var(--main_color);
  -webkit-background-clip: text;
}

@keyframes homeBgText {
  0%,
  10%,
  100% {
    background-position: -41.3rem 0;
  }

  65%,
  85% {
    background-position: 0 0;
  }
}

.home_content .transparent_text::before {
  animation-delay: 2s;
  animation: homeCursorText 6s linear infinite;
  border-right: 2px solid var(--main_color);
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 0;
  z-index: -1;
}

@keyframes homeCursorText {
  0%,
  10%,
  100% {
    width: 0;
  }

  65%,
  78%,
  85% {
    opacity: 1;
    width: 100%;
  }

  75%,
  81% {
    opacity: 0;
  }
}

.home_content .text_reveal {
  display: grid;
}

.home_content .text_reveal::after,
.home_content .text_reveal > span {
  grid-area: 1/1;
}

.home_content .text_reveal > span {
  padding: 0.5rem 1rem;
  opacity: 0;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  -webkit-mask-image: linear-gradient(#000 0 0), linear-gradient(#000 0 0);
  -webkit-mask-composite: destination-out;
  -webkit-mask-size: 100% 100%, 100%;
  mask-repeat: no-repeat;
  mask-position: center;
  mask-image: linear-gradient(#000 0 0), linear-gradient(#000 0 0);
  mask-composite: exclude;
  mask-size: 100% 100%, 100%;
}

.home_content .text_reveal > span:nth-child(1) {
  -webkit-text-stroke: 1px var(--main_color);
  color: transparent;
  font: 700 4.6rem "Orbitron", sans-serif;
  -webkit-mask-image: linear-gradient(#000 0 0);
  mask-image: linear-gradient(#000 0 0);
  animation: text_reveal-1 2s ease-in-out 1s forwards;
}

.home_content .text_reveal > span:nth-child(2) {
  -webkit-text-stroke: 1px var(--text_color);
  color: var(--text_color);
  font: 700 4.6rem "Orbitron", sans-serif;
  -webkit-mask-image: linear-gradient(#000 0 0);
  mask-image: linear-gradient(#000 0 0);
  animation: text_reveal-2 2s ease-in-out 1s forwards;
}

.home_content .text_reveal::after {
  content: "";
  z-index: 2;
  border: 0.125rem solid var(--main_color);
  border-block: none;
  width: 100%;
  justify-self: center;
  opacity: 0;
  animation: text_reveal-lines 2s ease-in-out 1s forwards;
}

@keyframes text_reveal-lines {
  5%,
  95% {
    opacity: 1;
  }
  50% {
    width: 0;
  }
}

@keyframes text_reveal-1 {
  0%,
  100% {
    -webkit-mask-size: 100% 100%, 100%;
    mask-size: 100% 100%, 100%;
    opacity: 1;
  }
  50% {
    -webkit-mask-size: 0% 100%, 100%;
    mask-size: 100% 100%, 100%;
  }
}

@keyframes text_reveal-2 {
  0%,
  50% {
    -webkit-mask-size: 0% 100%;
    mask-size: 0% 100%;
    opacity: 1;
  }
  100% {
    -webkit-mask-size: 100% 100%;
    mask-size: 100% 100%;
    opacity: 1;
  }
}

.social_media {
  display: flex;
}

.social_media a {
  align-items: center;
  border: 0.2rem solid var(--main_color);
  background: transparent;
  border-radius: 50%;
  color: var(--main_color);
  display: inline-flex;
  font-size: 1.6rem;
  height: 3.5rem;
  justify-content: center;
  margin: 1rem 1.5rem 3rem 0;
  position: relative;
  transition: 0.8s ease;
  width: 3.5rem;
}

.whatsapp_link:hover {
  color: #fff;
  background: #25d366;
  border: none;
}

.email_link:hover {
  color: #fff;
  background: #ee0a0a;
  border: none;
}

.linkedin_link:hover {
  color: #fff;
  background: #2867b2;
  border: none;
}

.github_link:hover {
  color: #fff;
  background: #181717;
  border: none;
}

.btn_box {
  animation: animate 0.8s ease-in-out 0.9s 1 forwards;
  opacity: 0;
  position: relative;
}

.btn_box .btn {
  border-radius: 0.6rem;
  background: var(--main_color);
  border: 0.2rem solid var(--main_color);
  box-shadow: 0 0 1rem var(--main_color);
  color: var(--bg_color);
  display: inline-block;
  font-weight: 600;
  font-size: 1.4rem;
  letter-spacing: 0.1rem;
  overflow: hidden;
  position: relative;
  padding: 1.2rem 3.2rem;
  transition: 0.5s ease;
  z-index: 1;
  cursor: pointer;
}

.btn_box .btn::before {
  background: var(--bg_color);
  content: "";
  position: absolute;
  height: 100%;
  left: 0;
  top: 0;
  transition: 0.5s;
  width: 0;
  z-index: -1;
}

.btn_box .btn:hover::before {
  width: 100%;
}

.btn_box .btn:hover {
  box-shadow: none;
  color: var(--main_color);
}

.home_img {
  position: fixed;
  right: 25rem;

}

.home_img img {
  object-fit: none;
  width: 40vw;
  z-index: 2;
}

.dropdown_content {
  background-color: #000;
  border: 0.2rem solid var(--main_color);
  height: auto;
  position: absolute;
  top: 100%;
  text-align: center;
  transition: height 0.5s ease;
  width: 15rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.dropdown_content button {
  background-color: var(--main_color);
  color: #000;
  padding: 0.5rem 1rem;
  border: 1px solid;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.dropdown_content button:hover {
  background-color: #fff;
}

.modal_container {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  align-items: center;
  justify-content: center;
  width: 33vw;
  max-height: 60vh;
  color: var(--main_color);
  border: 2px solid var(--main_color);
  background-color: var(--bg_color);
}

.modal_title {
  font-size: 2.5rem;
  font-weight: bold;
  margin-bottom: 1rem;
  padding-left: 22rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  color: var(--main_color);
  border: 2px solid var(--main_color);
  background-color: var(--bg_color);
}

.modal_title svg {
  font-size: 3rem;
  cursor: pointer;
}

.modal_content {
  width: 32.6vw;
  max-height: 50vh;
  overflow-y: auto;
  background-color: var(--bg_color);
  margin-left: 0rem;
  margin-top: -2rem;
}

.modal_content img {
  width: 31.9vw;
  height: auto;
  margin-bottom: 1rem;
  margin-left: 0rem;
  display: flex;
  flex-direction: column;
}

.modal_footer {
  display: flex;
  justify-content: flex-end;
}

.ring {
  position: relative;
  width: 500px;
  height: 500px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.ring i {
  position: absolute;
  inset: 0;
  border: 2px solid var(--main_color);
  transition: 0.5s;
}
.ring i:nth-child(1) {
  border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
  animation: animate-ring 6s linear infinite;
}
.ring i:nth-child(2) {
  border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
  animation: animate-ring 4s linear infinite;
}
.ring i:nth-child(3) {
  border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
  animation: animate-ring2 10s linear infinite;
}

@keyframes animate-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
@keyframes animate-ring2 {
  0% {
    transform: rotate(360deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

/* <========== breakpoints ==========> */

@media (max-width: 1100px) {
  .home_img {
    bottom: -1rem;
    right: 2rem;
  }

  .home_img img {
    width: 30vw;
  }
}

@media (max-width: 991px) {
  .home_img {
    bottom: -14rem;
    right: 4rem;
  }

  .home_img img {
    width: 50vw;
  }

  .home_content {
    height: 50rem;
  }

}

@media (max-width: 691px) {
  .home_content {
    height: 70rem;
  }

  .home_img img {
    width: 70vw;
  }

  .home_img {
    bottom: -14rem;
    right: 5rem;
  }

  .ring i {
    width: 260px;
    height: 260px;
    z-index: 2;
    margin-left: 15rem;
    margin-top: 15rem;
  }

  .text_reveal > span:nth-child(1) {
    font-size: 4rem !important;
  }

  .text_reveal > span:nth-child(2) {
    font-size: 4rem !important;
  }
}

@media (max-width: 470px) {
  .modal_container {
    width: 70vw;
  }

  .modal_content {
    width: 69vw;
  }

  .modal_content img {
    width: 66vw;
  }
  .modal_title {
    padding-left: 9rem;
  }

  .modal_title svg {
    font-size: 3rem;
    cursor: pointer;
  }

  .home_img img {
    width: 115vw;
  }

  .home_img {
    bottom: -14rem;
    right: -4rem;
  }

  .ring i {
    width: 260px;
    height: 260px;
    z-index: 2;
    margin-left: 13rem;
    margin-top: 13rem;
  }
}

@media (max-width: 400px) {
  .home_img {
    bottom: -13rem;
    right: -7.5rem;
  }

  .home_img img {
    width: 110vw;
    position: relative;
    z-index: 2;
  }

  .ring i {
    width: 260px;
    height: 260px;
    z-index: 2;
    margin-left: 13rem;
    margin-top: 13rem;
  }
}

@media (max-width: 375px) {
  .home_img {
    bottom: -14rem;
    right: -7.5rem;
  }

  .home_img img {
    width: 68vw;
  }

  .ring i {
    width: 260px;
    height: 260px;
    z-index: 2;
    margin-left: 13rem;
    margin-top: 13rem;
  }
}

